--- a/indexEng.html
+++ b/indexEng.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Apartament in Lviv</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="css/common.css" type="text/css" />
 </head>
 
 <body>
     <header>
         <nav id="language">
-            <a href="indexEng.html" title="link to change language to Eng">Eng</a>
+            <a href="indexEng.html" title="link to change language to Eng" class="active">Eng</a>
             <!--ТУТ ТРЕБА ДАТИ ПОСИЛАННЯ   done-->
             <a href="index.html" title="link to change language of the page from english to ukraine">UA</a>
         </nav>
@@ -24,8 +25,7 @@
         </div>
         <nav class="main_menu">
             <ul class="main_menu_list">
-                <li><a href="indexEng.html" title="go to homepage">Home</a></li>
-                <!--ТУТ ТРЕБА ДАТИ ПОСИЛАННЯ  done-->
+                <li><a href="indexEng.html" title="go to homepage">Home</a><i class="fas fa-caret-down"></i></li>
                 <li><a href="#" title="go to the apartaments list">Apartaments</a></li>
                 <li><a href="contactspages/contactEng.html" title="go to partnership page">Partnership</a></li>
             </ul>
@@ -124,16 +124,20 @@
         </div>
 
     </main>
-
-    <footer>
-        <hr class="hline_footer">
-        <p>made on cloud9</p>
+    <hr class="hline_footer">
+    <footer id="footer">
+        <div>
+            <h5>connect with developer:</h5>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="far fa-envelope"></i></a>
+        </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="js/index.js" async></script>
+    
+    <script src="js/index.js"></script>
 </body>
 
 </html>
